@@ -2,6 +2,8 @@
 
 USER LEVEL CHANGES
 
+-- fully allow data to be provided as part of constants argument in nimbleModel for compatibility with JAGS and BUGS, which mix data and constants
+
 -- added Dirichelt-multinomial conjugacy handling
 
 -- Added 'oldSpec' argument to configureMCMC. Allows rebuilding of MCMCs without the need to recompile code if there are no new types of samplers.
@@ -15,6 +17,8 @@ DEVELOPER LEVEL CHANGES
 -- fixed naming issue in checking posterior summaries against known values in test_mcmc 
 
 BUG FIXES 
+
+-- fixed bug that allowed inits to overwrite data values in variables that are mixtures of data and parameters
 
 -- fixed bug in naming of nodes in as.matrix() when there is a variable with a single indexed node (e.g. x[1], but no other nodes in the variable 'x')
 
